<resources>
    <string name="app_name">Module_Habit</string>
    <string name="habit_top_tab_habit">习惯</string>
    <string name="habit_top_tab_alarm">闹钟</string>
    <string name="alarm_tip_1">一键小睡眠</string>

    <!--small sleep-->
    <string name="small_sleep_1">科学小盹</string>
    <string name="small_sleep_2">高效午休</string>

    <string name="small_sleep_3">差旅模式</string>
    <string name="small_sleep_4">完整午休</string>
    <string name="small_sleep_tip_1">消除疲劳</string>
    <string name="small_sleep_tip_2">避免迷糊</string>
    <string name="small_sleep_tip_3">调整时差</string>
    <string name="small_sleep_tip_4">慢波睡眠</string>

    <!--lifestyle-->
    <string name="lifestyle_sleep_tip_1">开始记录睡眠</string>
    <string name="lifestyle_sleep_prepare">睡前准备</string>
    <string name="lifestyle_sleep_prepare_tip_1">提前30min进行</string>
    <string name="lifestyle_sleep_remind">入睡提醒</string>
    <string name="lifestyle_sleep_time">12:30</string>

    <!--prepare-->
    <string name="prepare_title">设置睡前准备</string>
    <string name="prepare_title_bar_right_text">确定</string>
    <string name="prepare_tip_name_1">睡前洗漱</string>
    <string name="prepare_short_tip_1">良好个人习惯，开启优质睡眠</string>
    <string name="prepare_tip_1">缓解身体疲劳，形成仪式感，建议为睡着前首个步骤，因为洗澡后往往体温多高不宜睡眠，所以留出时间让身体顺应昼夜节奏调低体温，酝酿睡意</string>
    <string name="prepare_tip_name_2">轻度阅读</string>
    <string name="prepare_short_tip_2">轻松的、平静的碎片阅读</string>
    <string name="prepare_tip_2">阅读纸质书比电子设备更有利于睡前。有研究者认为，营造良好的睡前阅读氛围，尤其是轻松式阅读，确实有利于人们更好的进入优质睡眠</string>
    <string name="prepare_tip_name_3">整理行程</string>
    <string name="prepare_short_tip_3">为明天做好准备，无忧进入梦乡</string>
    <string name="prepare_tip_3">把第二天的事情列出清单，准备好必需品，也可以提前做一些简单和缓的准备工作，这样可以避免睡前让琐碎小事塞满大脑，彻底的放空自己</string>
    <string name="prepare_tip_name_4">整理环境</string>
    <string name="prepare_short_tip_4">睡前扫扫地，整理抽屉什么的</string>
    <string name="prepare_tip_4">根据自己的习惯对环境略加整理：扫地、整理桌面或抽屉、收拾散落的衣服等，让物件们各得其所，及优化生活环境，又放慢思绪，安心入眠</string>
    <string name="prepare_tip_name_5">轻度学习</string>
    <string name="prepare_short_tip_5">睡眠是学习者的铠甲，记忆的伴侣</string>
    <string name="prepare_tip_5">在睡眠过程中发生的离线记忆再处理过程是记忆形成机制非常重要的组成部分。依据你自己的喜好，记少量单词/练字/复习今天所习得的技能等等，利用睡眠巩固记忆</string>
    <string name="prepare_tip_name_6">按摩头皮</string>
    <string name="prepare_tip_name_7">搓涌泉穴</string>
    <string name="prepare_tip_name_8">仰卧揉腹</string>
    <string name="prepare_tip_name_9">478睡眠呼吸</string>
    <string name="prepare_tip_name_10">均等放松呼吸</string>
    <string name="prepare_tip_name_11">冥思禅修呼吸</string>
    <string name="prepare_tip_name_12">个人特有习惯</string>

    <!--SleepPrepareView-->
    <string name="sleep_prepare_time">%.0f min</string>

    <!--SleepActivity-->
    <string name="sleep_title_str_1">记录睡眠</string>
    <string name="sleep_title_str_2">记录暂停</string>
    <string name="sleep_title_str_3">记录睡眠中</string>
    <string name="sleep_morning_alarm_str">晨起闹铃</string>
    <string name="sleep_tip_1">将于%s唤醒你</string>
    <string name="sleep_tip_2">屏幕朝下放置，开始记录</string>
    <string name="sleep_tip_3">屏幕朝下放置，继续记录</string>
    <string name="sleep_tip_4">前往设置</string>
    <string name="sleep_tip_5">睡眠时间太短，无法生成睡眠质量报告</string>
    <string name="sleep_btn_str_1">开始睡眠</string>
    <string name="sleep_btn_str_2">长按结束</string>
    <string name="sleep_alarm_time">%d:%d</string>

    <!--AlarmActivity-->
    <string name="alarm_setting_title">闹钟设置</string>
    <string name="alarm_setting_title_bar_right_text">确定</string>
    <string name="alarm_setting_mode_repeat">重复</string>
    <string name="alarm_setting_music_str">唤醒音乐</string>
    <string name="alarm_setting_name">闹钟名称</string>
    <string name="alarm_setting_name_hint_text">点击编辑名称</string>

    <!--ReportFinishDialog-->
    <string name="dialog_report_finish_msg">睡眠报告已生成，是否前往质量报告详情页面</string>
    <string name="dialog_report_finish_btn_cancel">取消</string>
    <string name="dialog_report_finish_btn_sure">确定</string>

    <!--MonthReportActivity-->
    <string name="month_report_title">%d 月睡眠报告</string>
</resources>
