<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.alarm.AlarmActivity">

    <com.example.lib_common.base.view.TitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_title_bar_height"
        app:left_icon="@drawable/common_title_bar_back"
        app:right_text="@string/alarm_setting_title_bar_right_text"
        app:title_text="@string/alarm_setting_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TimePicker
                android:id="@+id/time_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:timePickerMode="spinner" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="12dp"
                android:paddingTop="10dp"
                android:paddingRight="12dp"
                android:paddingBottom="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/alarm_setting_mode_repeat"
                    android:textColor="@color/alarm_setting_mode_repeat_color"
                    android:textSize="16sp" />

                <com.example.lib_common.base.view.SwitchButtonView
                    android:id="@+id/switch_button_view"
                    android:layout_width="36dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/alarm_setting_divider_line_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:paddingLeft="12dp"
                android:paddingTop="10dp"
                android:paddingRight="12dp"
                android:paddingBottom="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/alarm_setting_music_str"
                    android:textColor="@color/alarm_setting_mode_repeat_color"
                    android:textSize="16sp" />

                <LinearLayout
                    android:id="@+id/ll_alarm_wake_music"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingLeft="4dp"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="我不想起床"
                        android:textColor="@color/alarm_setting_mode_music_color"
                        android:textSize="14sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/alarm_setting_next" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/alarm_setting_divider_line_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:paddingLeft="12dp"
                android:paddingTop="5dp"
                android:paddingRight="12dp"
                android:paddingBottom="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="60dp"
                    android:text="@string/alarm_setting_name"
                    android:textColor="@color/alarm_setting_mode_repeat_color"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/et_alarm_name"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/common_input_edit_bg"
                    android:gravity="right|center"
                    android:hint="@string/alarm_setting_name_hint_text"
                    android:singleLine="true"
                    android:textColor="@color/alarm_setting_hint_text_color"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>