<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#767676"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ui.sleep.SleepActivity">

    <com.example.lib_common.base.view.TitleBar
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_title_bar_height"
        app:backgroundColor="@color/transport"
        app:left_icon="@drawable/common_title_bar_back" />

    <LinearLayout
        android:id="@+id/ll_screen_top"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/sleep_title_str_1"
            android:textColor="@color/sleep_title_color"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:gravity="center"
            android:text="@string/sleep_morning_alarm_str"
            android:textSize="14sp"
            android:textColor="@color/sleep_alarm_str_color" />

        <TextView
            android:id="@+id/tv_alarm_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/sleep_alarm_bg"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:paddingTop="5dp"
            android:paddingRight="20dp"
            android:paddingBottom="5dp"
            android:text="07:38"
            android:textColor="@color/sleep_alarm_time_color"
            android:textSize="14dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="80dp"
            android:gravity="center"
            android:text="@string/sleep_tip_2"
            android:textColor="@color/sleep_tip_2_color" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_screen_bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/sleep_title_str_1"
            android:textColor="@color/sleep_title_color"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:gravity="center"
            android:text="@string/sleep_tip_1"
            android:textSize="14sp"
            android:textColor="@color/sleep_alarm_str_color" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/sleep_tip_2"
            android:textColor="@color/sleep_tip_2_color"
            android:textSize="14dp" />
    </LinearLayout>
</LinearLayout>